<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trio</string>
    <string name="hint">Hint</string>
    <string name="hints_ended">No more hints</string>
    <string name="trio_found">Trio found!</string>
    <string name="not_trio">This is not a trio</string>
    <string name="error_shape">Shape doesn\'t match</string>
    <string name="error_color">Color doesn\'t match</string>
    <string name="error_fill">Filling doesn\'t match</string>
    <string name="error_number">Number doesn\'t match</string>
    <string name="solo_game_status">%1$d cards left</string>
    <string name="solo_game_ended">Game ended. No more trios</string>
    <string name="solo_game_restart">Restart game</string>
    <string name="classic_trio_count">Found %1$d trios</string>
    <string name="classic_status">%1$d cards left</string>
    <string name="classic_hint_count">%1$d hints left</string>
    <string name="classic_pause">Pause</string>
    <string name="classic_hint">Hint (%1$d)</string>
    <string name="classic_hints_finished">No more hints</string>
    <string name="classic_end">Congratulations! You\'ve found all trios</string>
    <string name="classic_objective">Find Trios</string>
    <string name="classic_subobjective">There\'s always at least one Trio visible.</string>
    <string name="classic_hints">You\'ve got 10 hints and each costs 30 seconds.</string>
    <string name="classic_ends">Game ends when there are no more Trios and cards in the deck</string>
    <string name="practice_trio_count">Found %1$d out of %2$d trios</string>
    <string name="practice_end">Congratulations! You\'ve found all trios.</string>
    <string name="practice_resigned">You missed %1$d trios:</string>
    <string name="practice_objective">Find 3 Trios</string>
    <string name="practice_subobjective">Trios are hidden in 12 visible cards.</string>
    <string name="practice_already_found">This Trio has already been found</string>
    <string name="speed_end">Time\'s up!</string>
    <string name="speed_time_left">%1$d seconds remained</string>
    <string name="speed_found">%1$d Trios found</string>
    <string name="pause_continue">Continue</string>
    <string name="pause_restart">Restart Game</string>
    <string name="pause_new_game">New game</string>
    <string name="pause_save_quit">Save &amp; Quit</string>
    <string name="pause_quit">Quit</string>
    <string name="pause_start">Start</string>
    <string name="tutorial_next">Next</string>
    <string name="tutorial_step1_header">Each card has 4 attributes: </string>
    <string name="tutorial_shape">Shape</string>
    <string name="tutorial_number">Quantity</string>
    <string name="tutorial_colour">Color</string>
    <string name="tutorial_fill">Filling</string>
    <string name="tutorial_step2_header">Trio is a set of three cards, for which each attribute is either the same or different.</string>
    <string name="tutorial_1common">Trio with 1 common attribute</string>
    <string name="tutorial_2common">Trio with 2 common attributes</string>
    <string name="tutorial_3common">Trio with 3 common attributes</string>
    <string name="tutorial_no_common">Trio with without common attributes</string>
    <string name="tutorial_wrong_shape">It\'s not a Trio because shape is not the same or different.</string>
    <string name="tutorial_wrong_number">It\'s not a Trio because quantity is not the same or different.</string>
    <string name="tutorial_wrong_color">It\'s not a Trio because color is not the same or different..</string>
    <string name="tutorial_wrong_fill">It\'s not a Trio because filling is not the same or different.</string>
    <string name="tutorial_wrong_message">Wrong: %1$s </string>
    <string name="tutorial_back">Back</string>
    <string name="tutorial_quit">Back to Menu</string>
    <string name="tutorial_step3_header">Complete a trio. Find missing card</string>
    <string name="tutorial_end">Congratulations!</string>
    <string name="tutorial_end_message">You are ready to play Trio. Choose a game mode to start with</string>
    <string name="game_classic">Classic Trio</string>
    <string name="game_classic_desc">Find trios until deck runs out of cards.</string>
    <string name="game_tutorial">Tutorial</string>
    <string name="game_tutorial_desc">Learn how to find trios.</string>
    <string name="game_challenge">Daily Challenge</string>
    <string name="game_challenge_desc">12 cards and 3 hidden trios. Find them as fast as you can.</string>
    <string name="game_start">Start</string>
    <string name="openfeint_question">Would you like to keep scores online using OpenFeint? (can be changed later in settings)</string>
    <string name="music">\u266A</string>
    <string name="help_button">\?</string>
    <string name="settings">Settings</string>
    <string name="settings_gameplay">Gameplay</string>
    <string name="settings_display_errors">Display what was wrong</string>
    <string name="settings_display_errors_description">Shows a message saying what was wrong after selecting three which didn\'t make Trio</string>
    <string name="settings_main">OpenFeint</string>
    <string name="settings_using_openfeint">Use OpenFeint to keep scores</string>
    <string name="settings_using_openfeint_description">Requires granting OpenFeint permisson to post scores online. Enables achievements and leaderboards</string>
    <string name="settings_play_music">Background music</string>
    <string name="settings_play_music_description">Plays background music on Trio startup</string>
    <string name="settings_play_sounds">Sound effects</string>
    <string name="settings_play_sounds_description">Plays sounds on clicking, selecting, etc.</string>
    <string name="settings_mute">Stop music</string>
    <string name="settings_unmute">Play music</string>
    <string name="help_classic_fragment3_top">Game ends when there are no trios among remaining cards.</string>
    <string name="help_quit">Back to game</string>
    <string name="help_tutorial">How to find trio?</string>
    <string name="practice_resign">Resign</string>
    <string name="help_classic_goal">Your task is to find it as quickly as possible.</string>
    <string name="help_classic_1">There is at least one trio hidden among cards on the screen.</string>
    <string name="help_classic_2">Touch cards to select or unselect them.</string>
    <string name="help_classic_3">Cards making up trio will be replaced with new ones.</string>
    <string name="help_classic_4">Deck contains 81 different cards.</string>
    <string name="help_classic_5">During the game you can use hints, though its number is limited and each usage will cost you 30 seconds.</string>
    <string name="help_practice_goal">Your task is to find them as quickly as possible.</string>
    <string name="help_practice_1">There are exactly three hidden trios among cards on the screen.</string>
    <string name="help_practice_2">When selected three cards make trio, corresponding one will be revealed on the side.</string>
    <string name="help_practice_3">Game ends when all three trios are found.</string>
    <string name="help_practice_4">By resigining you can see trios you could not found.</string>
    <string name="game_classic_continue">Continue</string>
    <string name="game_classic_new_game">New Game</string>
    <string name="game_challenge_new_game">New Challenge</string>

    <string name="menu_description_classic">Find Trios on the screen. Each found Trio is replaced with 3 new cards. Play until the deck runs out of them.</string>
    <string name="menu_description_speed">Find as many Trios as possible in 2 minutes. Each found Trio is replace with 3 new cards.</string>
    <string name="menu_description_triple">Find 3 hidden Trios in 12 visible cards as quickly as possible.</string>
    <string name="menu_description_help">Learn what is Trio and how to find it. Complete Trio Quiz.</string>
    <string name="menu_description_play_games">Compete with your friends. Browse leaderboards and your achievements.</string>
    
    <string name="menu_description_button_play">Play!</string>
    <string name="menu_description_button_new_game">New Game</string>
    <string name="menu_description_button_continue">Continue</string>
    <string name="menu_description_button_learn">Learn!</string>
    <string name="menu_description_button_sign_in">Sign in!</string>
    <string name="menu_description_button_achievements">Achievements</string>
    <string name="menu_description_button_leaderbaords">Leaderboards</string>
    <string name="help_speed_4">You\'ve got 2 minutes to find as many as possible</string>
    
</resources>