<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/layoutClouds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:scaleType="center"
        android:src="@drawable/clouds" />

    <com.barcicki.trio.core.CardView
        android:id="@+id/card1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/square_reverse" />

    <com.barcicki.trio.core.CardView
        android:id="@+id/card2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/card1"
        android:layout_below="@+id/card1"
        android:layout_marginTop="10dp"
        android:src="@drawable/square_reverse" />

    <com.barcicki.trio.core.CardView
        android:id="@+id/card3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/card2"
        android:layout_below="@+id/card2"
        android:layout_marginTop="10dp"
        android:src="@drawable/square_reverse" />

    <Button
        android:id="@+id/button1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:onClick="onNextClicked"
        android:text="@string/tutorial_next" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/card1"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/card1"
        android:src="@drawable/tutorial" />

    <TextView
        android:id="@+id/textView1"
        style="@style/dark_shadow"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="10dp"
        android:text="@string/tutorial_step1_header"
        android:textColor="@color/yellow"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView2"
        style="@style/dark_shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/tutorial_shape"
        android:textColor="@android:color/black"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/TextView01"
        style="@style/dark_shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="5dp"
        android:text="@string/tutorial_number"
        android:textColor="@color/red"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/TextView02"
        style="@style/dark_shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:layout_marginTop="5dp"
        android:text="@string/tutorial_colour"
        android:textColor="@color/green"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/TextView03"
        style="@style/dark_shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_below="@+id/TextView02"
        android:layout_marginTop="5dp"
        android:text="@string/tutorial_fill"
        android:textColor="@color/blue"
        android:textSize="22dp" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:onClick="onBackClicked"
        android:text="@string/tutorial_quit" />

</RelativeLayout>