<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_static"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <com.barcicki.trio.core.CardGrid
            android:id="@+id/cardsContainer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.3" android:visibility="visible">
        </com.barcicki.trio.core.CardGrid>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/gamePauseButton"
                style="@style/nice_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="10dp"
                android:onClick="onPauseClicked"
                android:paddingLeft="@dimen/button_padding_size"
                android:paddingRight="@dimen/button_padding_size"
                android:text="@string/classic_pause" />

            <Button
                android:id="@+id/gameHintButton2"
                style="@style/nice_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:onClick="onHintClicked"
                android:paddingLeft="@dimen/button_padding_size"
                android:paddingRight="@dimen/button_padding_size"
                android:text="@string/classic_hint" android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/musicSwitch"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:onClick="onMusicButtonPressed"
                android:text="@string/music" android:background="@drawable/nice_button" android:textColor="@color/white" android:paddingLeft="@dimen/button_padding_size" android:paddingRight="@dimen/button_padding_size" android:paddingTop="5dp" android:paddingBottom="5dp" android:textSize="@dimen/button_text_size"/>

            <TextView
                android:id="@+id/gameTimer"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="right|center_vertical"
                android:text="00:00"
                android:textColor="@android:color/black"
                android:textSize="@dimen/clock_size" />
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/gamePause"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        layout="@layout/classic_pause" />
            
</RelativeLayout>